# inwx-cli

./: LICENSE  README.md  pyproject.toml
src/inwx_cli/: api_core.py  api_session.py  cli.py  config.py  context.py  exceptions.py  secrets.py
src/inwx_cli/api_methods/: domain.py  nameserver.py
